@@ -1,6 +1,7 @@
 import { CommonModule } from "@angular/common";
 import { NgModule } from "@angular/core";
 import { RouterModule, Routes } from "@angular/router";
+import { AuthenticationComponent } from "./auth/authentication/authentication.component";
 import { GuitarMusicLayoutComponent } from "./category-page/guitar-music-layout.component";
 import { PianoMusicLayoutComponent } from "./category-page/piano-music-layout.component";
 import { VoiceMusicLayoutComponent } from "./category-page/voice-music-layout.component";
@@ -13,7 +14,8 @@ const routes:Routes = [
     {path: 'guitar-music', component: GuitarMusicLayoutComponent},
     {path: 'voice-music', component: VoiceMusicLayoutComponent},
     {path: 'woodwind-music', component: WoodwindMusicLayoutComponent},
-    {path: 'home,', component: HomeLayoutComponent}
+    {path: 'home,', component: HomeLayoutComponent},
+    {path : 'auth', component: AuthenticationComponent}
 ];
 
 @NgModule({
